# InkyPi

./: .gitignore  pyproject.toml
src/config/: device_dev.json
src/plugins/apod/: apod.py  settings.html
src/static/styles/: main.css
