[project]
name = "inkypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "astral>=3.2",
    "feedparser>=6.0.12",
    "icalendar>=6.3.2",
    "numpy>=2.4.1",
    "pi-heif>=1.1.1",
    "psutil>=7.2.1",
    "pytest>=8.3.5",
    "pytest-env>=1.1.5",
    "pytz>=2025.2",
    "recurring-ical-events>=3.8.0",
    "ruff>=0.9.10",
    "waitress>=3.0.2",
]

[tool.pytest_env]
SRC_DIR = "../src"
